2006-11-19  Gabor Csardi  <csardi@kzoo.edu>

	* interfaces/R/igraph/R/structural.properties.R (transitivity) :
	slightly rewritten, updated, more types are supported now
	* interfaces/R/src/rinterface.c (R_igraph_transitivity) : removed
	(R_igraph_transitivity_undirected)
	(R_igraph_transitivity_local_undirected) : added
	

2006-11-18  Gabor Csardi  <csardi@kzoo.edu>

	* interfaces/R/igraph/R/components.R (no.clusters) : added
	* interfaces/R/src/rinterface.c (R_igraph_no_clusters) : added

	* interfaces/R/igraph/R/minimum.spannin.tree.R (minimum.spanning.tree)
	: use 'weight' edge attribute automatically if present
	
2006-11-14  Gabor Csardi  <csardi@kzoo.edu>

	* interfaces/R/igraph/R/structure.generators.R 
	(graph.extended.chordal.ring) : added
	* interfaces/R/src/rinterface.c (R_igraph_extended_chordal_ring) :
	added

2006-11-09  Gabor Csardi  <csardi@kzoo.edu>

	* interfaces/R/src/rinterface.c (R_igraph_spinglass_my_community) :
	return more data: cohesion, adhesion, inner & outer links

2006-11-07  Gabor Csardi  <csardi@kzoo.edu>

	* interfaces/R/igraph/R/community.R (spinglass.community) :
	removed unneccesary arguments from .Call
	* interfaces/R/src/rinterface.c (R_igraph_spinglass_my_community) :
	removed unneccesary arguments

2006-11-06  Gabor Csardi  <csardi@kzoo.edu>

	* interfaces/R/igraph/R/community.R (spinglass.community) : added
	* interfaces/R/src/rinterface.c (R_igraph_spinglass_community) 
	(R_igraph_spinglass_my_community) : added

2006-10-21  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/structure.generators.R (graph.adjacency) :
	added 'weighted' argument to create weighted graphs

2006-10-18  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/structural.properties.R (constraint) :
	weight parameter added
	* interfaces/R/igraph/src/rinterface.c (R_igraph_constraint) :
	weight parameter added

2006-10-08  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/flow.R (graph.vertex.mincut) : removed